<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<modelVersion>4.0.0</modelVersion>
<groupId>org.yipuran.core</groupId>
<artifactId>yipuran-core</artifactId>
<version>4.5</version>

<name>yipuran-core</name>
<url>https://github.com/yipuran/yipuran-core</url>


<properties>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<github.global.server>github</github.global.server>
	<guice.version>4.2.2</guice.version>
</properties>

<distributionManagement>
	<repository>
		<id>internal.repos</id>
		<name>Temporary Staging Repository</name>
		<url>file://${project.build.directory}/mvn-repo</url>
	</repository>
</distributionManagement>

<dependencies>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>1.7.25</version>
	</dependency>
	<dependency>
		<groupId>aopalliance</groupId>
		<artifactId>aopalliance</artifactId>
		<version>1.0</version>
	</dependency>
	<dependency>
		<groupId>javax.inject</groupId>
		<artifactId>javax.inject</artifactId>
		<version>1</version>
	</dependency>
	<dependency>
		<groupId>com.google.inject</groupId>
		<artifactId>guice</artifactId>
		<version>${guice.version}</version>
	</dependency>
	<dependency>
		<groupId>com.google.inject.extensions</groupId>
		<artifactId>guice-multibindings</artifactId>
		<version>${guice.version}</version>
	</dependency>
	<dependency>
		<groupId>com.google.inject.extensions</groupId>
		<artifactId>guice-assistedinject</artifactId>
		<version>${guice.version}</version>
	</dependency>
	<dependency>
		<groupId>com.google.inject.extensions</groupId>
		<artifactId>guice-throwingproviders</artifactId>
		<version>${guice.version}</version>
	</dependency>
	<dependency>
		<groupId>com.google.code.findbugs</groupId>
		<artifactId>jsr305</artifactId>
		<version>3.0.1</version>
	</dependency>
</dependencies>

<build>
	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<configuration>
				<source>1.8</source>
				<target>1.8</target>
			</configuration>
		</plugin>
		<plugin>
			<groupId>com.github.github</groupId>
			<artifactId>site-maven-plugin</artifactId>
			<version>0.12</version>
			<configuration>
				<!-- Git コミットメッセージ -->
				<message>Maven artifacts for ${project.version}</message>
				<noJekyll>true</noJekyll>
				<!-- distributionManagement の url と一致させる -->
				<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
				<!-- リモートブランチ名 -->
				<branch>refs/heads/mvn-repo</branch>
				<includes><include>**/*</include></includes>
				<!-- Github リポジトリ名 -->
				<repositoryName>yipuran-core</repositoryName>
				<!-- Github リポジトリユーザー名 -->
				<repositoryOwner>yipuran</repositoryOwner>
			</configuration>
			<executions>
				<!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
				<execution>
					<goals>
						<goal>site</goal>
					</goals>
				<phase>deploy</phase>
				</execution>
			</executions>
		</plugin>

		 <plugin>
			<artifactId>maven-deploy-plugin</artifactId>
			<version>2.8.1</version>
			<configuration>
				<altDeploymentRepository>internal.repos::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
			</configuration>
		</plugin>
	</plugins>
</build>
</project>